--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2"
