--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend server for the Scholars-Path platform.",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2",
-    "multer": "^2.0.2"
+    "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.2"
   }
 }
