--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
-    "html-to-docx": "^1.8.0",
+    "html-docx-js-typescript": "^0.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
