--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
