--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
