--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.3.1",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.4.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
