--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "html-docx-js-typescript": "^0.1.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
