--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.1.0",
+    "marked": "^16.4.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "puppeteer": "^24.25.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
