--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "marked": "^16.4.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "openai": "^6.5.0",
     "pdfkit": "^0.17.2",
     "puppeteer": "^24.25.0"
   },
